[package]
name = "bruteforcer"
version = "0.1.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbruteforce = "4.0.1"
# libbruteforce =  { path = "../libbruteforce" }
simple_logger = "5.1.0"
log = "0.4.14"

[profile.dev]
# With this, examples and tests run faster by a lot by default.
# this comes with the downside, that the debugger doesn't really work anymore.
opt-level = 1

[profile.release]
# everything for maximum performance
# https://doc.rust-lang.org/cargo/reference/profiles.html
# only differences from default settings
codegen-units = 1
lto = true
